[gd_scene load_steps=3 format=3 uid="uid://ctuy8qy7cfskd"]

[ext_resource type="Script" uid="uid://bmk7fwkgiile7" path="res://scripts/GameController.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bkybiq05jij60" path="res://assets/ui/board_bg.png" id="2"]

[node name="GameBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2")
stretch_mode = 5

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
offset_top = -1.0
offset_right = 1155.0
offset_bottom = 652.0
theme_override_constants/separation = 10

[node name="TopBar" type="HBoxContainer" parent="UI"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LblTurn" type="Label" parent="UI/TopBar"]
layout_mode = 2
text = "턴: P1"

[node name="Spacer" type="Control" parent="UI/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LblMem" type="Label" parent="UI/TopBar"]
layout_mode = 2
text = "메모리: 3"

[node name="HBox" type="HBoxContainer" parent="UI"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Board" type="VBoxContainer" parent="UI/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="RowOpRaising" type="HBoxContainer" parent="UI/HBox/Board"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="LblOpRaising" type="Label" parent="UI/HBox/Board/RowOpRaising"]
layout_mode = 2
text = "상대 육성"

[node name="OpRaising" type="HBoxContainer" parent="UI/HBox/Board/RowOpRaising"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="RowOpSec" type="HBoxContainer" parent="UI/HBox/Board"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="LblOpSec" type="Label" parent="UI/HBox/Board/RowOpSec"]
layout_mode = 2
text = "상대 보안 (여기로 드롭=보안 공격)"

[node name="OpSec" type="HBoxContainer" parent="UI/HBox/Board/RowOpSec"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="RowOpBattle" type="HBoxContainer" parent="UI/HBox/Board"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="LblOpBattle" type="Label" parent="UI/HBox/Board/RowOpBattle"]
layout_mode = 2
text = "상대 전장 (상대 카드로 드롭=대상 공격)"

[node name="OpBattle" type="HBoxContainer" parent="UI/HBox/Board/RowOpBattle"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Memory" type="HBoxContainer" parent="UI/HBox/Board"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LblMem2" type="Label" parent="UI/HBox/Board/Memory"]
layout_mode = 2
text = "메모리 게이지:"

[node name="MemBar" type="HSlider" parent="UI/HBox/Board/Memory"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -10.0
max_value = 10.0
value = 3.0
editable = false

[node name="RowMyBattle" type="HBoxContainer" parent="UI/HBox/Board"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="LblMyBattle" type="Label" parent="UI/HBox/Board/RowMyBattle"]
layout_mode = 2
text = "내 전장 (카드 위로 드래그=진화, 빈 영역으로 드래그=등장)"

[node name="MyBattle" type="HBoxContainer" parent="UI/HBox/Board/RowMyBattle"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="RowMyHand" type="HBoxContainer" parent="UI/HBox/Board"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="LblMyHand" type="Label" parent="UI/HBox/Board/RowMyHand"]
layout_mode = 2
text = "내 손패 (전장 빈 영역→등장 / 전장 카드 위→진화)"

[node name="MyHand" type="HBoxContainer" parent="UI/HBox/Board/RowMyHand"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="RowMyRaising" type="HBoxContainer" parent="UI/HBox/Board"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="LblMyRaising" type="Label" parent="UI/HBox/Board/RowMyRaising"]
layout_mode = 2
text = "내 육성 (효과 금지, '육성' 키워드만 예외)"

[node name="MyRaising" type="HBoxContainer" parent="UI/HBox/Board/RowMyRaising"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Sidebar" type="VBoxContainer" parent="UI/HBox"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="BtnEnd" type="Button" parent="UI/HBox/Sidebar"]
layout_mode = 2
text = "턴 종료"

[node name="LblStack" type="Label" parent="UI/HBox/Sidebar"]
layout_mode = 2
text = "효과 큐(스택)"

[node name="StackList" type="ItemList" parent="UI/HBox/Sidebar"]
layout_mode = 2
allow_reselect = true

[node name="LblZoom" type="Label" parent="UI/HBox/Sidebar"]
layout_mode = 2
text = "카드 줌"

[node name="ZoomText" type="RichTextLabel" parent="UI/HBox/Sidebar"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
